frontend/src/components/Diff/Diff.module.css
.container {
    padding: 8px;
    overflow: auto;
}

.diff {
    border-spacing: 1em 0;
}

.diff,
.log {
    display: block;
    user-select: text;
    border: none;
    font-family: monospace;
    font-size: 12px;
    white-space: pre;
    width: 100%;
}

.lineNumber {
    color: grey;
    font-size: 0.7em;
    font-style: italic;
}

.immediate { color: #6d6dff; }
.stack { color: #e3fc45; }
.register { color: #e3fc45; }

.delay_slot {
    font-weight: bold;
    color: #969896;
}

.diff_change { color: #6d6dff; }
.diff_add { color: #45bd00; }
.diff_remove { color: #c82829; }
.source_filename { font-weight: bold; }

.source_function {
    font-weight: bold;
    text-decoration: underline;
}

.source_other { font-style: italic; }
.source_line_num { font-style: italic; }
.rotation0 { color: magenta; }
.rotation1 { color: cyan; }
.rotation2 { color: rgb(0, 212, 0); }
.rotation3 { color: red; }
.rotation4 { color: lightyellow; }
.rotation5 { color: lightpink; }
.rotation6 { color: lightcyan; }
.rotation7 { color: lightgreen; }
.rotation8 { color: grey; }

